# individuality-public

./: .gitignore  Cargo.toml  README.md
pallets/dummy-dim/: Cargo.toml
pallets/dummy-dim/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/origin-restriction/: Cargo.toml
pallets/origin-restriction/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/people-lite/: Cargo.toml
pallets/people-lite/src/: benchmarking.rs  extension.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/people-multi/: Cargo.toml  README.md
pallets/people-multi/src/: benchmarking.rs  extension.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/resources/: Cargo.toml
pallets/resources/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
support/: Cargo.toml
support/src/: fungibles.rs  lib.rs  traits.rs
support/src/fungibles/: combine_holder.rs
support/src/genesis/: mod.rs
support/src/traits/: reality.rs
