[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/individuality.git"
homepage = "https://github.com/paritytech/individuality"
license = "GPL-3.0-only"
version = "0.1.0"

[workspace]
resolver = "2"

members = [
	"pallets/dummy-dim",
	"pallets/origin-restriction",
	"pallets/people-lite",
	"pallets/people-multi",
	"pallets/resources",
	"support",
]

[workspace.lints.clippy]
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
borrowed-box = { level = "allow", priority = 2 }                     # Reasonable to fix this one
complexity = { level = "warn", priority = 1 }
correctness = { level = "warn", priority = 1 }
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic
derivable_impls = { level = "allow", priority = 2 }                  # false positives
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
if-same-then-else = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
nonminimal-bool = { level = "allow", priority = 2 }                  # maybe
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
too-many-arguments = { level = "allow", priority = 2 }               # (Turning this on would lead to)
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
unit_arg = { level = "allow", priority = 2 }                         # stylistic
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
useless_conversion = { level = "allow", priority = 2 }               # Types may change
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
len_zero = { level = "allow", priority = 2 }

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
enumflags2 = { version = "0.7.10" }
hex-literal = { version = "0.4.1" }
itertools = { version = "0.11.0", default-features = false }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.3", default-features = false }
serde = { version = "1.0.209", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
subxt = { version = "0.42.1" }
subxt-macro = { version = "0.42.1" }
subxt-signer = { version = "0.42.1" }
tokio = { version = "1.4.11", features = ["rt-multi-thread"] }
ed25519-zebra = { version = "4.0.3", default-features = false }
verifiable = { version = "0.2.0", default-features = false, features = ["small-ring"] }
frame-benchmarking = { version = "42.0.0", default-features = false }
frame-executive = { version = "42.0.1", default-features = false }
frame-support = { version = "42.0.0", default-features = false }
frame-system = { version = "42.0.0", default-features = false }
frame-system-benchmarking = { version = "42.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "38.0.0", default-features = false }
frame-try-runtime = { version = "0.48.0", default-features = false }
pallet-asset-tx-payment = { version = "42.0.0", default-features = false }
pallet-asset-rate = { version = "21.0.0", default-features = false }
pallet-assets = { version = "45.0.0", default-features = false }
pallet-assets-holder = { version = "0.5.0", default-features = false }
pallet-aura = { version = "41.0.0", default-features = false }
pallet-authorship = { version = "42.0.0", default-features = false }
pallet-balances = { version = "43.0.1", default-features = false }
pallet-message-queue = { version = "45.0.0", default-features = false }
pallet-migrations = { version = "12.0.0", default-features = false }
pallet-multisig = { version = "42.0.0", default-features = false }
pallet-session = { version = "42.0.0", default-features = false }
pallet-skip-feeless-payment = { version = "17.0.0", default-features = false }
pallet-sudo = { version = "42.0.0", default-features = false }
pallet-timestamp = { version = "41.0.0", default-features = false }
pallet-transaction-payment = { version = "42.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "42.0.0", default-features = false }
pallet-utility = { version = "42.0.0", default-features = false }
pallet-verify-signature = { version = "0.5.0", default-features = false }
sp-api = { version = "38.0.0", default-features = false }
sp-arithmetic = { version = "28.0.0", default-features = false }
sp-block-builder = { version = "38.0.0", default-features = false }
sp-consensus-aura = { version = "0.44.0", default-features = false }
sp-core = { version = "38.0.0", default-features = false }
sp-genesis-builder = { version = "0.19.0", default-features = false }
sp-inherents = { version = "38.0.0", default-features = false }
sp-io = { version = "42.0.0", default-features = false }
sp-keyring = { version = "43.0.0", default-features = false }
sp-keystore = { version = "0.44.0", default-features = false }
sp-offchain = { version = "38.0.0", default-features = false }
sp-runtime = { version = "43.0.0", default-features = false }
sp-session = { version = "40.0.0", default-features = false }
sp-statement-store = { version = "22.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-trie = { version = "41.0.0", default-features = false }
sp-state-machine = { version = "0.47.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "38.0.0", default-features = false }
sp-tracing = { version = "18.0.0", default-features = false }
sp-transaction-pool = { version = "38.0.0", default-features = false }
sp-version = { version = "41.0.0", default-features = false }
substrate-wasm-builder = { version = "28.0.0", default-features = false }
pallet-xcm = { version = "22.0.1", default-features = false }
pallet-xcm-benchmarks = { version = "22.0.0", default-features = false }
polkadot-parachain-primitives = { version = "18.0.0", default-features = false }
polkadot-runtime-common = { version = "21.0.0", default-features = false }
rococo-runtime-constants = { version = "22.0.0", default-features = false }
xcm = { version = "18.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "22.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "21.0.0", package = "staging-xcm-executor", default-features = false }
xcm-runtime-apis = { version = "0.9.0", default-features = false }
assets-common = { version = "0.24.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.22.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.22.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "23.0.0", default-features = false }
cumulus-pallet-weight-reclaim = { version = "0.4.0", default-features = false }
cumulus-pallet-xcm = { version = "0.21.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.22.0", default-features = false }
cumulus-primitives-aura = { version = "0.19.0", default-features = false }
cumulus-primitives-core = { version = "0.20.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "13.0.0", default-features = false }
cumulus-primitives-utility = { version = "0.22.0", default-features = false }
pallet-collator-selection = { version = "23.0.0", default-features = false }
parachain-info = { version = "0.22.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "24.0.0", default-features = false }
testnet-parachains-constants = { version = "15.0.0", default-features = false }
bp-bridge-hub-rococo = { version = "0.24.0", default-features = false }
indiv-support = { path = "support", default-features = false }
indiv-pallet-dummy-dim = { path = "pallets/dummy-dim", default-features = false }
indiv-pallet-people-lite = { path = "pallets/people-lite", default-features = false }
indiv-pallet-people = { path = "pallets/people-multi", default-features = false }
indiv-pallet-origin-restriction = { path = "pallets/origin-restriction", default-features = false }
indiv-pallet-resources = { path = "pallets/resources", default-features = false }
rand = { version = "0.9.2" }
parking_lot = { version = "0.12.3" }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
[profile.dev.package]
verifiable = { opt-level = 3 }
schnorrkel = { opt-level = 3 }
ark-scale = { opt-level = 3 }
ark-ec = { opt-level = 3 }
ark-ff = { opt-level = 3 }
ark-serialize = { opt-level = 3 }
ark-std = { opt-level = 3 }
ark-ed-on-bls12-381-bandersnatch = { opt-level = 3 }
ark-bls12-381 = { opt-level = 3 }
ark-transcript = { opt-level = 3 }
ark-poly = { opt-level = 3 }
curve25519-dalek-ng = { opt-level = 3 }
merlin = { opt-level = 3 }
rand_chacha = { opt-level = 3 }
subtle-ng = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
zeroize = { opt-level = 3 }
