[package]
name = "pallet-resources"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "A pallet for common people resource management and allocation"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-statement-store = { workspace = true }
verifiable = { workspace = true }
xcm = { workspace = true }
individuality-support = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-people-lite = { workspace = true }
pallet-people-multi = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"individuality-support/std",
	"log/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-statement-store/std",
	"pallet-balances/std",
	"pallet-people-lite/std",
	"pallet-people-multi/std",
	"verifiable/std",
	"xcm/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"individuality-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-people-lite/runtime-benchmarks",
	"pallet-people-multi/runtime-benchmarks",
	"xcm/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-people-multi/try-runtime",
	"pallet-people-lite/try-runtime"
]
