[package]
name = "indiv-pallet-resources"
description = "A pallet for common people resource management and allocation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-statement-store = { workspace = true }
verifiable = { workspace = true }
xcm = { workspace = true }
indiv-support = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
indiv-pallet-people-lite = { workspace = true }
indiv-pallet-people = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"indiv-support/std",
	"log/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-statement-store/std",
	"pallet-balances/std",
	"indiv-pallet-people-lite/std",
	"indiv-pallet-people/std",
	"verifiable/std",
	"xcm/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"indiv-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"indiv-pallet-people-lite/runtime-benchmarks",
	"indiv-pallet-people/runtime-benchmarks",
	"xcm/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-balances/try-runtime",
	"indiv-pallet-people/try-runtime",
	"indiv-pallet-people-lite/try-runtime"
]
